--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,8 +1,46 @@
+html {
+  BACKGROUND: BLACK;
+}
+
 #profilePage-container {
 background: black;
 position:absolute;
 height:100%;
 width:100%;
+}
+
+#project {
+  text-align: left;
+  padding-left: 4px;
+  width: 80%;
+  margin-bottom: 10px;
+}
+
+#brendan {
+  margin-left: 270px;
+}
+
+#main {
+  margin-bottom: 1px;
+  font-weight: bold;
+  padding-left: 3px;
+}
+
+#image {
+  margin-right: 10px;
+}
+
+img {
+  height: 30px;
+  width: 30px;
+  margin-bottom: 1px;
+}
+
+#desc {
+  font-style: italic;
+  margin-bottom: 3px;
+  padding-bottom: 3px;
+  padding-left: 3px;
 }
 
 #profilePage-background{
@@ -19,6 +57,7 @@ width:100%;
   margin: auto;
   background: white;
   border-radius: 8px;
+  padding-bottom: 1px;
 }
 
 button {
@@ -34,6 +73,7 @@ button {
 }
 
 #profileInfo-container {
+  padding-top: 10px;
   margin-top:-100px;
 }
 
