--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -30,9 +30,9 @@ width:100%;
   margin-right: 10px;
 }
 
-img {
-  height: 30px;
-  width: 30px;
+#projimg{
+  height: 40px;
+  width: 40px;
   margin-bottom: 1px;
 }
 
@@ -59,17 +59,7 @@ img {
   padding-bottom: 1px;
 }
 
-button {
-  border-radius: 5px;
-  width:80%;
-  border:solid;
-  border-radius: 30px;
-  border-color: rgba(250, 246, 252, 0.933);
-  box-shadow: 1px 2px 8px 2px  rgb(178, 158, 194);
-  margin-top: 30px;
-  padding: 10px 10px 10px 10px;
-  background-color: white
-}
+
 
 #profileUsername-container {
   margin-top: -50px;
