--- a/client/src/components/SearchProjectsResults/individualProjectResult.css
+++ b/client/src/components/SearchProjectsResults/individualProjectResult.css
@@ -1,22 +1,63 @@
 .individualProject {
-  height: 125px;
-  width: 40%;
-  vertical-align: center;
-  border: solid;
-  border-width: thin;
-  margin: 5px;
-  padding: 5px;
+  border:solid;
+  border-radius: 30px;
+  border-color: rgba(250, 246, 252, 0.933);
+  box-shadow: 1px 2px 8px 2px  rgb(178, 158, 194);
+  text-align: center;
+  width: 600px;
+  height: 150px;
+  margin:auto;
+  margin-top: 60px;
+  margin-bottom: 50px;
+  padding: 10px 10px 10px 10px;
+  background-color: white;
+}
+
+
+
+/**
+height: 125px;
+width: 40%;
+vertical-align: center;
+border: solid;
+border-width: thin;
+margin: 5px;
+padding: 5px;
+border-radius: 30px;
+background-color: white;
+
+border:solid;
+border-radius: 30px;
+border-color: rgba(250, 246, 252, 0.933);
+box-shadow: 1px 2px 8px 2px  rgb(178, 158, 194);
+text-align: center;
+width: 400px;
+height: 380px;
+margin:auto;
+margin-top: 60px;
+margin-bottom: 50px;
+padding: 10px 10px 10px 10px;
+background-color: white;
+
+**/
+#projectImage {
+  margin-left: 2%;
+  border-radius: 30px;
 }
 
 .searchProject-projectImg {
   float: left;
   margin-right: 10px;
+  border-radius: 30px
 }
 
 .searchProject-projectDesc {
+
   float: left;
 }
 
 .btn-interview {
+  border-radius: 30px;
+  margin-right: 3%;
   float: right;
 }
